put cont background for animation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" type="text/css" href="http://localhost:4001/trefoil/css">
 <script src="http://localhost:4001/trefoil/script" defer="defer"></script>
 
+<div class="rgb_animcont">
 <div class="positionbox">
 <div class="thing" id="_1">
 <div class="rotbox" id="rotbox">
@@ -33,4 +34,5 @@
 </div>
 
 
+</div>
 </div>
